Add CI Forge Test Coverage

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,3 +16,10 @@ jobs:
 
       - name: Run tests
         run: make test
+        id: test
+
+      - name: Coverage
+        run: forge coverage --report lcov
+        id: coverage
+
+      - uses: codecov/codecov-action@v2
