--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,10 +16,9 @@ jobs:
 
       - name: Run tests
         run: make test
-        id: test
 
       - name: Coverage
         run: forge coverage --report lcov
-        id: coverage
 
-      - uses: codecov/codecov-action@v2
+      - name: Codecov
+        uses: codecov/codecov-action@v3
