--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,7 +18,4 @@ jobs:
         run: make test
 
       - name: Coverage
-        run: forge coverage --report lcov
-
-      - name: Codecov
-        uses: codecov/codecov-action@v3
+        run: forge coverage
