--- a/.github/workflows/certora.yml
+++ b/.github/workflows/certora.yml
@@ -37,6 +37,6 @@ jobs:
         run: pip3 install certora-cli
 
       - name: Verify ${{ matrix.l2dss }}
-        run: make certora-${{ matrix.l2dss }}
+        run: make certora-${{ matrix.l2dss }} short=1 multi=1
         env:
           CERTORAKEY: ${{ secrets.CERTORAKEY }}
