--- a/.github/workflows/certora.yml
+++ b/.github/workflows/certora.yml
@@ -11,6 +11,7 @@ jobs:
       matrix:
         l2dss:
           - vat
+          - dai
 
     steps:
       - name: Checkout
@@ -34,7 +35,7 @@ jobs:
         run: solc-select install 0.8.13
 
       - name: Install Certora
-        run: pip3 install certora-cli
+        run: pip3 install certora-cli-alpha-master
 
       - name: Verify ${{ matrix.l2dss }}
         run: make certora-${{ matrix.l2dss }} short=1 multi=1
