--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+/out
+.DS_Store
 cache/
-out/
+
+# certora
+.*certora*
+.last_confs/
+*.zip
+resource_errors.json
+.zip-output-url.txt
+certora_debug_log.txt
