--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,4 +18,7 @@ jobs:
         run: make test
 
       - name: Coverage
-        run: forge coverage
+        run: forge coverage --report lcov
+        uses: zgosalvez/github-actions-report-lcov@v1
+        with:
+          minimum-coverage: 100
