--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Coverage
         run: forge coverage --report lcov
+
+      - name: Report Coverage
         uses: zgosalvez/github-actions-report-lcov@v1
         with:
           minimum-coverage: 100
