--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -14,5 +14,11 @@ jobs:
         with:
           version: nightly
 
-      - name: Run tests
-        run: make test
+      - name: Coverage
+        run: forge coverage --report lcov
+
+      - name: Report Coverage
+        uses: zgosalvez/github-actions-report-lcov@v1
+        with:
+          coverage-files: ./lcov.info
+          minimum-coverage: 100
